feat(ai): 添加 LM Studio 和硅基流动 AI服务支持
- 移除 Spring Web 依赖，使用 IDEA SDK 的 HttpRequests 发送 HTTP 请求
- 新增 LMStudioProvider 和 SiliconFlowProvider 实现类
- 在 AIProviderType 中注册 LM_STUDIO 和 SILICONFLOW 提供商类型
- 更新 AIServiceFactory以支持新的 AI 服务提供商- 修改设置面板，将测试连接按钮移至模型选择面板
- 更新默认配置：字段生成默认开启、最大重试次数改为 2 次、超时时间改为10 秒
- 完善设置提示文本和布局，增强用户体验
- 更新单元测试以覆盖新增的 AI服务提供商